# retrieval-agents

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  langgraph.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/dev/: devcontainer.json
.devcontainer/eval/: Dockerfile  devcontainer.json
.github/workflows/: integration-tests.yml  unit-tests.yml
docs/: DEV_CONTAINER_SETUP.md  INSTALLATION_GUIDE.md
elasticsearch/: docker-compose.yaml  run_local_elasticsearch.sh
elasticsearch/scripts/: init-token.sh
evaluation/: evaluation_with_ragas.py
evaluation/ls_datasets/: bootcamp_qa.py
examples/: adaptive_rag_graph.ipynb
examples/langgraph/: langgraph_adaptive_rag.ipynb  langgraph_adaptive_rag_local.ipynb  langgraph_agentic_rag.ipynb  langgraph_crag.ipynb  langgraph_crag_local.ipynb  langgraph_self_rag.ipynb  langgraph_self_rag_local.ipynb
examples/langsmith/: qa-correctness.ipynb  ragas.ipynb
examples/python-sdk/: python_sdk.ipynb
src/retrieval_agents/: __init__.py  configurations.py  logging_config.py
src/retrieval_agents/agents/: __init__.py  adaptive_rag.py  configurations.py  prompts.py  retrieval.py  simple_rag.py  states.py
src/retrieval_agents/configurations/: __init__.py
src/retrieval_agents/indexers/: configurations.py  document_indexer.py  states.py  web_indexer.py
src/retrieval_agents/modules/: __init__.py  adaptive_rag.py  contextual_answer_generator.py  document_indexer.py  retrieval.py  simple_rag.py  states.py  utils.py  web_indexer.py
src/retrieval_agents/modules/indexers/_document_indexer/: document_indexer_graph.py
src/retrieval_agents/modules/indexers/_web_indexer/: web_indexer_graph.py  web_indexer_state.py
src/retrieval_agents/modules/rag/: __init__.py
src/retrieval_agents/modules/rag/_adaptive_rag/: adaptive_rag_configuration.py  adaptive_rag_graph.py  adaptive_rag_state.py
src/retrieval_agents/modules/rag/_simple_rag/: simple_rag_configuration.py  simple_rag_graph.py  simple_rag_state.py
src/retrieval_agents/states/: __init__.py
src/retrieval_agents/utils/: ollama_utils.py
src/retrieval_agents/workflows/: __init__.py  retrieval.py
src/retrieval_agents/workflows/indexers/: __init__.py  configurations.py
src/retrieval_agents/workflows/indexers/_document_indexer/: document_indexer_graph.py  document_indexer_state.py
src/retrieval_agents/workflows/indexers/_web_indexer/: web_indexer_graph.py
src/retrieval_agents/workflows/rag/_adaptive_rag/: adaptive_rag_configuration.py  adaptive_rag_graph.py  adaptive_rag_state.py
src/retrieval_agents/workflows/rag/_simple_rag/: simple_rag_configuration.py  simple_rag_graph.py
tests/configurations/adaptive_rag/: anthropic.config  ollama.config  openai.config
tests/integration_tests/: conftest.py  test_adaptive_rag.py  test_contextual_answer_generator.py  test_graph.py
tests/unit_tests/: test_adaptive_rag.py  test_contextual_answer_generator.py
