[project]
name = "retrieval-agents"
version = "0.0.1"
description = "RAG agents"
authors = [
  { name = "Cosmac Inc." }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<3.13"
dependencies = [
  "langgraph-cli[inmem] (>=0.2.8,<0.3.0)",
  "langgraph (>=0.4.3,<0.5.0)",
  "langchain (>=0.3.25,<0.4.0)"
]

[tool.poetry]
packages = [
  { include = "retrieval_agents", from = "src" }
]
include = ["src/retrieval_agents/py.typed"]

[project.optional-dependencies]
openai = ["langchain-openai>0.1.22"]
anthropic = ["langchain-anthropic>=0.3.10"]
mongodb = ["langchain-mongodb>=0.1.9"]
cohere = ["langchain-cohere>=0.4.3"]
pinecone = ["langchain-pinecone>=0.1.3,<0.3.0"]
nomic = ["langchain-nomic>=0.1.4", "nomic[local]>=3.4.1,<4.0.0"]
ollama = ["langchain-ollama>=0.3.1"]
fireworks = ["langchain-fireworks>=0.1.7"]
elasticsearch = ["langchain-elasticsearch>=0.3.2"]
chroma = ["langchain-chroma>=0.2.3,<0.3.0"]
unstructured = ["langchain-unstructured>=0.1.6,<0.2.0", "unstructured[md]>=0.17.2,<0.18.0"]

[tool.poetry.group.dev.dependencies]
python-dotenv = ">=1.1.0,<2.0.0"
mypy = ">=1.11.1"
ruff = ">=0.6.1"
ipykernel = ">=6.29.5"
pytest-cov = ">=6.1.1"
pre-commit = ">=4.2.0"
codespell = ">=2.4.1"
ragas = "^0.2.15"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.codespell]
builtin = "clear,rare,code,names"
skip    = ".mypy_cache,.pytest_cache,.ruff_cache,htmlcov,retrieval_agents.egg-info,.coverage,.env,*.ipynb,*.log"
ignore-words = ".codespellignore"

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"
files = ["src", "tests", "evaluation"]